feat: Implement configuration management for video-dl
- Added a new config module to handle user configuration settings.
- Implemented config command to get, set, and reset configuration values.
- Integrated configuration loading and saving functionality.
- Updated download and info commands to utilize configuration settings for default quality, format, and download directory.
- Enhanced dependency checking to ensure required tools (yt-dlp, ffmpeg) are available.
- Improved YouTube platform handling with better error reporting and metadata fetching.
- Introduced a progress tracker for download operations to provide visual feedback.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,10 @@ env_logger = "0.10"
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.7"  # Added for config file handling
+
+# File system and path operations
+dirs = "5.0"  # Added for accessing user directories
 
 # Utils
 uuid = { version = "1.6", features = ["v4"] }
